<resources>
    <string name="app_name">CMPUT301_Assign_1</string>
    <string name="app_title">CountBook</string>
    <string name="new_item">new</string>
    <string name="enter_your_title">Add a Title</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="submit">Submit</string>
    <string name="title_hint">Todays calories</string>
    <string name="initial_value_prompt">Enter Initial Value</string>
    <string name="initial_value_hint">450</string>
    <string name="set_default">Reset to default</string>
    <string name="delete_item">Delete Item</string>
    <string name="reset">reset</string>
    <string name="details">details</string>
    <!--Counter Detail strings-->
    <string name="title_detail">Details</string>
    <string name="sub_title_name">Title</string>
    <string name="sub_title_currcount">Current Value</string>
    <string name="sub_title_defaultval">Default Value</string>
    <string name="sub_title_description">Description</string>
    <string name="btn_apply">apply</string>
    <string name="btn_delete">delete</string>
    <string name="back">back</string>
    <string name="add_a_description">Add a Description</string>
    <string name="my_calorie_count">My Calorie Count</string>
</resources>
