<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    tools:context="com.example.shang.cmput301_assign_1.EditItemActivity">

    <TextView
        android:id="@+id/item_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:textColor="#000099"
        android:textSize="150sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/add_count"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:onClick="changeCounterClick"
        android:tag="1"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="71dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back" />

    <Button
        android:id="@+id/min_count"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:onClick="changeCounterClick"
        android:tag="2"
        android:text="@string/subtract"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_back" />

    <Button
        android:id="@+id/set_default"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:onClick="changeCounterClick"
        android:tag="3"
        android:text="@string/set_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/counter_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btn_detail"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="viewDetails"
        android:text="@string/details"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_back"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="backToMain"
        android:text="@string/back"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/set_default"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp" />
</android.support.constraint.ConstraintLayout>
