<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    tools:context="com.example.shang.cmput301_assign_1.viewDetailActivity">

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="47dp" />

    <EditText
        android:id="@+id/editText_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintRight_toRightOf="@+id/editText_title"
        app:layout_constraintTop_toBottomOf="@+id/editText_title"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_title"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/detail_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:text="@string/sub_title_name"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toTopOf="@+id/editText_title"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/detail_sub_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/sub_title_currcount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@android:color/background_light"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/editText_count"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/detail_sub_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/sub_title_defaultval"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_count"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/editText_default"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginEnd="47dp"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_count"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_count"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editText_title"
        app:layout_constraintHorizontal_bias="0.085" />

    <TextView
        android:id="@+id/detail_sub_description"
        android:layout_width="86dp"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sub_title_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_default"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:backgroundTint="#ffffff"
        android:onClick="deleteItem"
        android:text="@string/btn_delete"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="8sp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="#ffffff"
        android:onClick="applyChanges"
        android:text="@string/btn_apply"
        android:textColor="#000cba"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/date_detail"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginEnd="10dp"
        android:textSize="12sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.433" />

</android.support.constraint.ConstraintLayout>
